profile: editor: Properly initialize the first palette color

https://bugzilla.gnome.org/show_bug.cgi?id=768850